update icon location

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div class="content">
         <h1>hqssdev</h1>
-        <a class="rounded-button" id="close-image" href="https://github.com/hqsss"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"></a>
-        <a class="rounded-button" id="close-image" href="https://twitter.com/hqssdev"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png"></a>
-        <a class="rounded-button" id="close-image" href="https://discordapp.com/users/635097068741853204"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/original/discord-logo-icon-editorial-free-vector.jpg"></a>
+        <a class="rounded-button1" id="close-image" href="https://github.com/hqsss"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"></a>
+        <a class="rounded-button2" id="close-image" href="https://twitter.com/hqssdev"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png"></a>
+        <a class="rounded-button3" id="close-image" href="https://discordapp.com/users/635097068741853204"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/original/discord-logo-icon-editorial-free-vector.jpg"></a>
         https://discordapp.com/users/635097068741853204
     </div>
     
