--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>hi-hi</title>
+    <link rel="icon" type="image" href="https://cdn.discordapp.com/attachments/1013825603968979056/1034547881539010621/69d22321a544f1bcb9c00de1408b4ecd.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
